--- a/app/src/main/res/layout/fragment_photo_gallery.xml
+++ b/app/src/main/res/layout/fragment_photo_gallery.xml
@@ -10,8 +10,7 @@
     <androidx.recyclerview.widget.RecyclerView
     android:id="@+id/photo_recycler_view"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:visibility="visible" />
+    android:layout_height="match_parent" />
 
     <ProgressBar
         android:id="@+id/pBPhotos"
